# openmeteo_example

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/openmeteo_example/: __init__.py  forecast.py  historic.py  openmeteo.py
tests/: test_forecast.py  test_historical.py
