[project]
name = "openmeteo-example"
version = "0.3.5"
description = "An example project that allows for easy interfacing with OpenMeteo API - https://open-meteo.com/"
readme = "README.md"
authors = [
    { name = "Sam Hill", email = "s.hill@yorksj.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
openmeteo-example = "openmeteo_example:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--cov=src"
